test/functions/bradc/paramThis/funParamThis4.good
funParamThis4.chpl:17: error: ambiguous call 'C.foo()'
funParamThis4.chpl:7: note: candidates are: ref C.foo()
funParamThis4.chpl:11: note:                 C.foo()
